test/parser/Queries/syntax_errors/fail_K-WhereExpr-5.xq
(:**** ne ** ne ** let *********************** where **********************:)
 $ (: Test: K-WhereExpr-5          $   let                        :)
(: Written by: foo Englich          foo $        for             :)
 $ (: Date: 2006-10-05T18:29:37+02:00 foo                      :) for 
(: where  Purpose: A for expression binding to  single value,  with a positive where clause. :)
(:* eq ****** ne *** for ************* where **** eq **************** let *foo******:)
empty(foofor $i  for in 1  eq where false where () return $i)